<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="6dp"
        android:foreground="?selectableItemBackgroundBorderless"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="60dp"
        android:fontFamily="@font/sora"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/color_ff212121"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_des1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sora"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/uninstall_step_1_des_1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_des2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/syne"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/uninstall_step_1_des_2"
        android:textColor="#FF888888"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_des1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_retry"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_settings_bg"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_des2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            app:srcCompat="@drawable/ic_item_try" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/syne"
            android:includeFontPadding="false"
            android:text="@string/pdf_features_not_working_well"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_ffecd9_20"
            android:gravity="center"
            android:minWidth="55dp"
            android:paddingHorizontal="10dp"
            android:text="@string/try_again"
            android:textColor="#FF8303"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_discover"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/item_settings_bg"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_retry">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            app:srcCompat="@drawable/ic_item_discover" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/syne"
            android:includeFontPadding="false"
            android:text="@string/missing_a_feature_you_need"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_ffecd9_20"
            android:gravity="center"
            android:minWidth="55dp"
            android:paddingHorizontal="10dp"
            android:text="@string/discover_more"
            android:textColor="#FF8303"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_keep"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_primary_10"
        android:fontFamily="@font/sora"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/keep_using"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_discover" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_uninstall"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_cancel_bg"
        android:fontFamily="@font/sora"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/uninstall"
        android:textColor="#0E0E0E"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_keep" />

    <FrameLayout
        android:id="@+id/ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>